kube-manifests/02-Deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ms-microservice
  labels:
    app: ms-restapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-restapp
  template:  
    metadata:
      labels: 
        app: ms-restapp
    spec:
      containers:
        - name: ms-restapp
          image: i3clogic/ms-microservice:1.0.0  
          ports: 
            - containerPort: 8095           
          livenessProbe:
            exec:
              command: 
                - /bin/sh
                - -c 
                - nc -z localhost 8095
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ms/health-status
              port: 8095
            initialDelaySeconds: 60
            periodSeconds: 10
